5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4328/executions/1643_1053.log
== TEST (2019-04-15 12:05:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

if (patrono == servo):
	print (cervo eh patrono de Hary Potter)
else:
	print (nao eh patrono do Harry Potter)

-- ERROR:
File "XXXX", line 6
    print (cervo eh patrono de Hary Potter)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:06:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.


if (patrono = servo):
	print (cervo eh patrono de Hary Potter)
else:
	print (nao eh patrono do Harry Potter)

-- ERROR:
File "XXXX", line 6
    if (patrono = servo):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:07:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

mensagem = input()
if (patrono = servo):
	mensagem = print (cervo eh patrono de Hary Potter)
else:
	mensagem = print (nao eh patrono do Harry Potter)

-- ERROR:
File "XXXX", line 6
    if (patrono = servo):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:08:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

mensagem = input()
if ("patrono" = "servo"):
	mensagem = print (cervo eh patrono de Hary Potter)
else:
	mensagem = print (nao eh patrono do Harry Potter)

-- ERROR:
File "XXXX", line 6
    if ("patrono" = "servo"):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:08:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

mensagem = input()
if ("patrono" == "servo"):
	mensagem = print (cervo eh patrono de Hary Potter)
else:
	mensagem = print (nao eh patrono do Harry Potter)

-- ERROR:
File "XXXX", line 7
    mensagem = print (cervo eh patrono de Hary Potter)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:21:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

mensagem = input()
if ("patrono" == "servo"):
	print (cervo eh patrono de Hary Potter)
else:
	print (nao eh patrono do Harry Potter)

-- ERROR:
File "XXXX", line 7
    print (cervo eh patrono de Hary Potter)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:21:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

mensagem = input()
if ("patrono" == "servo"):
	print (cervo eh patrono de Hary Potter)
else:
	print (nao eh patrono do Harry Potter)
-- ERROR:
File "XXXX", line 7
    print (cervo eh patrono de Hary Potter)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:22:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

mensagem = input()
if ("patrono" == "servo"):
	print ("cervo eh patrono de Hary Potter")
else:
	print ("nao eh patrono do Harry Potter)
-- ERROR:
File "XXXX", line 9
    print ("nao eh patrono do Harry Potter)
                                          ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:22:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

mensagem = input()
if ("patrono" == "servo"):
	print ("cervo eh patrono de Hary Potter")
else:
	print ("nao eh patrono do Harry Potter")
-- OUTPUT:
nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:22:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

mensagem = input()
if ("patrono" == "servo"):
	print ("cervo eh patrono de Hary Potter")
else:
	print ("nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.204261
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:22:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

mensagem = input()
if ("patrono" == "servo"):
	print ("cervo eh patrono de Hary Potter")
else:
	print ("nao eh patrono do Harry Potter")
-- OUTPUT:
nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:24:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

mensagem = input()
if ("patrono" == "servo"):
	print ("cervo eh patrono de Hary Potter")
else:
	print ("mensagem " + "nao eh patrono do Harry Potter")
-- OUTPUT:
mensagem nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:24:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

mensagem = input()
if ("patrono" == "servo"):
	print ("cervo eh patrono de Hary Potter")
else:
	print ("mensagem " + "nao eh patrono do Harry Potter")
-- OUTPUT:
mensagem nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:25:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

mensagem = input()
if ("patrono" == "cervo"):
	print ("cervo eh patrono de Hary Potter")
else:
	print ("mensagem " + "nao eh patrono do Harry Potter")
-- OUTPUT:
mensagem nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:25:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

mensagem = input()
if ("patrono" == "cervo"):
	print ("cervo eh patrono de Hary Potter")
else:
	print ("asno " + "nao eh patrono do Harry Potter")
-- OUTPUT:
asno nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:25:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

mensagem = input()
if ("patrono" == "cervo"):
	print ("cervo eh patrono de Hary Potter")
else:
	print ("asno " + "nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.137667
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
asno nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
asno nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:25:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

mensagem = input()
if ("patrono" == "cervo"):
	print ("cervo eh patrono de Hary Potter")
else:
	print ("mensagem " + "nao eh patrono do Harry Potter")
-- OUTPUT:
mensagem nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:22:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

mensagem = input()
if ("patrono" == "cervo"):
	print ("cervo eh patrono de Hary Potter")
else:
	print ("mensagem " + "nao eh patrono do Harry Potter")
-- OUTPUT:
mensagem nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
